--- a/home.html
+++ b/home.html
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-<!-- PDF Viewer Section -->+
+<!-- PDF Viewer Section -->
 <section id="pdf-viewer-section">
     <h2>Resume</h2>
     
