--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
 </div>
 
     <footer>
-        <p>© 2025 Aditya K | Portfolio <div>Visitors: <span id="visitorCount">Loading...</span></div></p>
+        <p>© 2025 Aditya K | Portfolio <div>Views:<span id="visitorCount">Loading...</span></div></p>
     </footer>
 
    <!-- Include PDF.js Library -->
