--- a/home.html
+++ b/home.html
@@ -67,7 +67,9 @@
 
     <div id="education">
         <h2>Education</h2>
-        <p>B.Tech in ECE - Graduated in 2024.</p>
+        <p>B.Tech in ECE - Graduated in 2024 with,<b>7.2</b> GPA</p>
+        <p><b>Swarnandhra Institute Of Engineering and Technologies</b>, Narsapur
+        Affiliated to JNTU Kakinada</p>
     </div>
 
     <div id="projects">
@@ -154,15 +156,16 @@
 </div>
 
     <footer>
-        <p>© 2025 Aditya K | Portfolio <div>Views:<span id="visitorCount">Loading...</span></div></p>
+        <p>© 2025 Aditya K | Portfolio <div>Views:<span id="views">Loading...</span></div></p>
     </footer>
 
    <!-- Include PDF.js Library -->
 <script src="pdf-viewer/pdf.js"></script>
-<script src="script.js"></script>
+<script defer src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+<script src="server.js"></script>
 
 
 </body>
