--- a/home.html
+++ b/home.html
@@ -48,11 +48,11 @@
         </tr>
         <tr>
             <td class="category">• Web Development</td>
-            <td>@ HTML, CSS, JavaScript, React JS, Angular, MySQL,Firebase</td>
+            <td>@ HTML, CSS, JavaScript, React JS, MongoDB, MySQL, Firebase</td>
         </tr>
         <tr>
             <td class="category">• Android Development</td>
-            <td>@ XML, Java, Firebase, API Integration</td>
+            <td>@ XML, Java, Firebase, UPI, API Integration</td>
         </tr>
         <tr>
             <td class="category">• UI/UX Design</td>
@@ -64,6 +64,19 @@
         </tr>
         </table>
     </div>
+
+    <h2>Skills</h2>
+        <div class="logo-box">
+            <img class="logo" src="html5.png">
+            <img class="logo" src="text.png">
+            <img class="logo" src="java-script.png">
+            <img class="logo" src="physics.png">
+            <img class="logo" src="programing.png">
+            <img class="logo" src="mongodb.png">
+            <img class="logo" src="firebase.png">
+            <img class="logo" src="java.png">
+            
+        </div>
 
     <div id="education">
         <h2>Education</h2>
